// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders properly 1`] = `
<div
  id="home"
>
  <div
    id="banner"
  >
    <h1
      id="banner-text"
    >
      Training Plans
    </h1>
  </div>
  <div
    id="workouts"
  >
    <div
      id="row-1"
    >
      <div
        className="workout-category running"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Running
        </h1>
      </div>
      <div
        className="workout-category cycling"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Cycling
        </h1>
      </div>
    </div>
    <div
      id="row-2"
    >
      <div
        className="workout-category triathlon"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Triathlon
        </h1>
      </div>
      <div
        className="workout-category other"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Other
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home component renders properly 1`] = `
<div
  id="home"
>
  <div
    id="banner"
  >
    <h1
      id="banner-text"
    >
      Training Plans
    </h1>
  </div>
  <div
    id="workouts"
  >
    <div
      id="row-1"
    >
      <div
        className="workout-category running"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Running
        </h1>
      </div>
      <div
        className="workout-category cycling"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Cycling
        </h1>
      </div>
    </div>
    <div
      id="row-2"
    >
      <div
        className="workout-category triathlon"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Triathlon
        </h1>
      </div>
      <div
        className="workout-category other"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <h1
          className="workout-category-title"
        >
          Other
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkoutCategory component renders properly 1`] = `
<div
  className="workout-category running"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h1
    className="workout-category-title"
  >
    running
  </h1>
</div>
`;

exports[`WorkoutItem component renders properly 1`] = `
<button
  className="workout-item"
  onClick={[Function]}
  type="button"
>
  <img
    alt="workout type"
    className="icon"
    src="https://assets.trainingpeaks.com/images/icons/training-plans/half-marathon.svg"
  />
  <p
    className="title"
  >
    HALFMARATHON Training Plan (INTERMEDIATE 24Wk Plan, Sat Race) Start Any Monday Power Based
  </p>
  <p
    className="weeks-duration"
  >
    24
  </p>
  <p
    className="price"
  >
    207
  </p>
</button>
`;

exports[`WorkoutList component renders properly 1`] = `
<div
  id="workout-table"
>
  <div
    id="workout-table-header"
  >
    <p
      className="icon"
    />
    <p
      className="title"
    >
      Title
    </p>
    <p
      className="weeks-duration"
    >
      Weeks
    </p>
    <p
      className="price"
    >
      Price
    </p>
  </div>
</div>
`;
